--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@angular-tailwind-nx/lib1": ["libs/lib1/src/index.ts"],
+      "@angular-tailwind-nx/lib2": ["libs/lib2/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
