--- a/libs/tailwind-preset/project.json
+++ b/libs/tailwind-preset/project.json
@@ -1,7 +1,7 @@
 {
-    "projectType": "library",
-    "root": "libs/tailwind-preset",
-    "sourceRoot": "libs/tailwind-preset",
-    "targets": {},
-    "tags": []
-  }
+  "name": "tailwind-preset",
+  "projectType": "library",
+  "sourceRoot": "libs/tailwind-preset",
+  "targets": {},
+  "tags": []
+}
